packages/playground/assets/css/playground.css
.tools_page_playground #wpbody-content,
.tools_page_playground #wpcontent {
	padding-left: 0px !important;
}

.tools_page_playground #wpwrap,
.tools_page_playground #wpbody,
.tools_page_playground #wpbody-content {
	padding-bottom: 0px;
	height: 100%;
}

.tools_page_playground #wpwrap,
.tools_page_playground #wpbody {
	position: initial;
}
.tools_page_playground #wpadminbar {
	display: none;
}

#wp-playground-toolbar {
	background-color: #eaaa00;
	font-weight: bold;
	text-align: center;
	font-size: 1rem;
	padding: 0.75em;
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: center;
	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
	position: relative;
	z-index: 1999999;
	animation: playground-fade-in 0.25s 0.65s
		cubic-bezier(0.175, 0.885, 0.5, 1.85) 1 forwards;
	transform: translateY(-100%);
}

#wp-playground-toolbar > a {
	text-transform: capitalize;
	padding: 0 0.5rem;
}

#wp-playground-main-area {
	position: relative;
	display: flex;
	flex: 1;
}

#wp-playground,
#wp-playground-wrapper {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 999999;
	background-color: #fff;
	display: flex;
	flex-direction: column;
}

@keyframes playground-fade-in {
	from {
		transform: translateY(-100%);
	}

	to {
		transform: translateY(0);
	}
}

